--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Recipe App</title>
+    <meta charset="UTF-8"/>
+    <title>Recipe Home</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>Recipe App</h1>
+    <div class="container-fluid">
+        <h1>Recipe App!</h1>
+        <div class="row g-0">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="card-group">
+                    <div class="card panel-primary">
+                        <div class="card-header">
+                            <h2 class="card-title" th:text="'Recipe Title'">Recipe title Here!</h2>
+                        </div>
+                        <div class="card-body">
+                            <p th:text="'Recipe description goes here.'">Recipe Description Here!</p>
+                            <a
+                                href="#" class="btn btn-primary"
+                                th:href="@{'/recipe/1/image'}"
+                                role="button"
+                            >
+                                Change Image
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
