--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,29 +9,6 @@
 
 </head>
 <body>
-    <div class="container-fluid">
-        <h1>Recipe App!</h1>
-        <div class="row g-0">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="card-group">
-                    <div class="card panel-primary">
-                        <div class="card-header">
-                            <h2 class="card-title" th:text="'Recipe Title'">Recipe title Here!</h2>
-                        </div>
-                        <div class="card-body">
-                            <p th:text="'Recipe description goes here.'">Recipe Description Here!</p>
-                            <a
-                                href="#" class="btn btn-primary"
-                                th:href="@{'/recipe/1/image'}"
-                                role="button"
-                            >
-                                Change Image
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h1>My Recipes!</h1>
 </body>
 </html>
