--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<!-- /*@thymesVar id="recipe" type="com.jaredgood.springrecipeapp.domain.Recipe" */-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row justify-content-center">
         <div class="col-6">
@@ -22,21 +23,26 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
+                                <th></th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
                                 <td th:text="${recipe.id}">123</td>
                                 <td th:text="${recipe.description}">Tasty Goodness</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td th:text="${recipe.id}">123</td>
                                 <td th:text="${recipe.description}">Tasty Goodness</td>
+                                <td><a href="#">View</a></td>
                             </tr>
                             <tr
                                 th:each="recipe : ${recipes}"
                             >
                                 <td th:text="${recipe.id}">123</td>
                                 <td th:text="${recipe.description}">Tasty Goodness</td>
+                                <td>
+                                    <a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                             </tr>
                         </table>
                     </div>
