--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+<!-- /*@thymesVar id="recipes" type="java.util.List" */-->
 <!-- /*@thymesVar id="recipe" type="com.jaredgood.springrecipeapp.domain.Recipe" */-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row justify-content-center">
@@ -23,6 +24,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
+                                <th></th>
                                 <th></th>
                             </tr>
                             </thead>
@@ -41,8 +43,8 @@
                             >
                                 <td th:text="${recipe.id}">123</td>
                                 <td th:text="${recipe.description}">Tasty Goodness</td>
-                                <td>
-                                    <a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a></td>
                             </tr>
                         </table>
                     </div>
