--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link >
+    <title th:text="${recipe.description}">Title</title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -20,7 +19,7 @@
         <div class="col-6">
             <div class="card mb-3">
                 <div class="card-header text-white bg-primary">
-                    <h3 class="card-title" th:text="recipe.description">My Recipes!</h3>
+                    <h3 class="card-title" th:text="${recipe.description}">My Recipes!</h3>
                 </div>
                 <div class="card-body">
                     <div class="row">
@@ -29,29 +28,29 @@
                         </div>
                         <div class="col-9">
                             <ul>
-                                <li>cat one</li>
-                                <li>cat two</li>
-                                <li>cat three</li>
+                                <li th:remove="all">cat one</li>
+                                <li th:remove="all">cat two</li>
+                                <li th:each="category : ${recipe.getCategories()}" th:text="${category.getDescription()}">cat three</li>
                             </ul>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-3"><h5>Prep Time:</h5></div>
-                        <div class="col-3"><p>30 min</p></div>
+                        <div class="col-3"><p th:text="${recipe.getPrepTime()}">30 min</p></div>
                         <div class="col-3">Difficulty:</div>
-                        <div class="col-3"><p>Easy</p></div>
+                        <div class="col-3"><p th:text="${recipe.getDifficulty()}">Easy</p></div>
                     </div>
                     <div class="row">
                         <div class="col-3"><h5>Cook Time:</h5></div>
-                        <div class="col-3"><p>30 min</p></div>
+                        <div class="col-3"><p th:text="${recipe.getCookTime()}">30 min</p></div>
                         <div class="col-3">Servings:</div>
-                        <div class="col-3"><p>4</p></div>
+                        <div class="col-3"><p th:text="${recipe.getServings()}">4</p></div>
                     </div>
                     <div class="row">
                         <div class="col-3"><h5>Source:</h5></div>
-                        <div class="col-3"><p>30 min</p></div>
+                        <div class="col-3"><p th:text="${recipe.getSource()}">30 min</p></div>
                         <div class="col-3">URL:</div>
-                        <div class="col-3"><p>http://www.example.com</p></div>
+                        <div class="col-3"><a th:href="${recipe.getUrl()}">View Original</a></div>
                     </div>
 
                 </div>
@@ -64,9 +63,12 @@
                     <div class="row">
                         <div class="col-12">
                             <ul>
-                                <li>1 Cup of milk</li>
-                                <li>1 Teaspoon of chocolate</li>
-                                <li>1 Teaspoon of sugar</li>
+                                <li th:remove="all">1 Cup of milk</li>
+                                <li th:remove="all">1 Teaspoon of chocolate</li>
+                                <li  th:each="ingredient : ${recipe.getIngredients()}"
+                                     th:text="${ingredient.getAmount() +
+                                     ' ' + ingredient.uom.getDescription() +
+                                     ' - ' + ingredient.getDescription()}">1 Teaspoon of sugar</li>
                             </ul>
                         </div>
                     </div>
@@ -79,7 +81,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias amet atque debitis dolore expedita fuga labore, magni nam perferendis possimus quae quia reiciendis soluta veritatis? Blanditiis doloremque doloribus temporibus.</p>
+                            <p th:text="${recipe.getDirections()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias amet atque debitis dolore expedita fuga labore, magni nam perferendis possimus quae quia reiciendis soluta veritatis? Blanditiis doloremque doloribus temporibus.</p>
                         </div>
                     </div>
                 </div>
@@ -90,8 +92,8 @@
                 </div>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-12">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias amet atque debitis dolore expedita fuga labore, magni nam perferendis possimus quae quia reiciendis soluta veritatis? Blanditiis doloremque doloribus temporibus.</p>
+                        <div class="col-12" >
+                            <p th:each="note : ${recipe.getNotes()}" th:text="${note.getRecipeNotes()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias amet atque debitis dolore expedita fuga labore, magni nam perferendis possimus quae quia reiciendis soluta veritatis? Blanditiis doloremque doloribus temporibus.</p>
                         </div>
                     </div>
                 </div>
