--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,27 +24,27 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th></th>
-                                <th></th>
+                                <th>View</th>
+                                <th>Update</th>
+                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasty Goodness</td>
+                                <td>123</td>
+                                <td>Tasty Goodness 1</td>
                                 <td><a href="#">View</a></td>
                             </tr>
                             <tr th:remove="all">
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasty Goodness</td>
+                                <td>12333</td>
+                                <td>Tasty Goodness 2</td>
                                 <td><a href="#">View</a></td>
                             </tr>
-                            <tr
-                                th:each="recipe : ${recipes}"
-                            >
-                                <td th:text="${recipe.id}">123</td>
-                                <td th:text="${recipe.description}">Tasty Goodness</td>
+                            <tr th:each="recipe : ${recipes}">
+                                <td th:text="${recipe.id}">334</td>
+                                <td th:text="${recipe.description}">Tasty Goodness 3</td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">View</a></td>
                                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update'}">Update</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
                             </tr>
                         </table>
                     </div>
