--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -77,8 +77,8 @@
                 </div>
                 <div class="card mb-3">
                     <div class="card-header text-white bg-primary d-flex justify-content-between">
-                        <h4 class="card-title">Ingredients</h4>
-                        <button class="btn btn-light">Edit</button>
+                        <h3 class="card-title">Ingredients</h3>
+                        <a class="btn btn-light" href="#" th:href="@{/recipe/{id}/ingredients(id=${recipe.getId()})}" role="button">Edit</a>
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -95,7 +95,8 @@
                     </div>
                 </div>
                 <div class="card mb-3">
-                    <div class="card-header text-white bg-primary"><h4 class="card-title">Directions</h4></div>
+                    <div class="card-header text-white bg-primary">
+                        <h3 class="card-title">Directions</h3></div>
                     <div class="card-body">
                         <div class="row">
                             <textarea class="form-control" rows="3" th:field="*{directions}"></textarea>
@@ -103,7 +104,8 @@
                     </div>
                 </div>
                 <div class="card mb-3">
-                    <div class="card-header text-white bg-primary"><h4 class="card-title">Notes</h4></div>
+                    <div class="card-header text-white bg-primary">
+                        <h3 class="card-title">Notes</h3></div>
                     <div class="card-body">
                         <div class="row">
                             <textarea class="form-control" rows="3" th:field="*{notes.recipeNotes}"></textarea>
