--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
     <!-- Bootstrap -->
-    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
+    <link
+            crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            rel="stylesheet"
+            th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"
+            th:rel="stylesheet"
+    >
 
 </head>
 <body>
