--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -22,8 +22,9 @@
     <div class="row justify-content-center">
         <div class="col-6">
             <div class="card">
-                <div class="card-header text-white bg-primary">
-                    <h3>Ingredients</h3>
+                <div class="card-header text-white bg-primary d-flex justify-content-between">
+                    <h3 class="card-title">Ingredients</h3>
+                    <a class="btn btn-light" href="#" th:href="@{~/recipe/{recipeId}/ingredient/new(recipeId=${recipe.getId()})}" role="button">New</a>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
