--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -11,6 +11,11 @@
             th:rel="stylesheet"
             th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"
     >
+    <!-- JavaScript -->
+    <script th:src="@{/webjars/popper.js/2.9.2/umd/popper.min.js}"></script>
+    <script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+    <!-- HTMX -->
+    <script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- /*@thymesVar id="recipe" type="com.jaredgood.springrecipeapp.domain.Recipe" */-->
@@ -18,20 +23,29 @@
     <div class="row justify-content-center">
         <div class="col-6">
             <div class="card mb-3">
-                <div class="card-header text-white bg-primary">
-                    <h3 class="card-title" th:text="${recipe.description}">My Recipes!</h3>
+                <div class="card-header text-white bg-primary row">
+                    <h3 class="card-title col-8" th:text="${recipe.description}">My Recipes!</h3>
+                    <div class="col">
+                        <a class="btn btn-light" href="#"
+                           th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3">
                             <h5>Categories:</h5>
                         </div>
-                        <div class="col-9">
+                        <div class="col-3">
                             <ul>
                                 <li th:remove="all">cat one</li>
                                 <li th:remove="all">cat two</li>
                                 <li th:each="category : ${recipe.getCategories()}" th:text="${category.getDescription()}">cat three</li>
                             </ul>
+                        </div>
+                        <div class="col-6">
+                            <img src="../../static/images/guacamole400x400WithX.jpg"
+                                 th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                 width="200" height="200">
                         </div>
                     </div>
                     <div class="row">
@@ -101,12 +115,6 @@
         </div>
     </div>
 </div>
-
-<!-- JavaScript -->
-<script th:src="@{/webjars/popper.js/2.9.2/umd/popper.min.js}"></script>
-<script th:href="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
-<!-- HTMX -->
-<script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous"></script>
 
 
 </body>
